--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -1,24 +1,41 @@
-.project-card{
-    background-color: red;
-    height: 300px;
-    width: 250px;
-    border-radius: 10px;
-    transition: 0.3s cubic-bezier(0.6, 0.4, 0, 1),transform 0.15s ease;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+.project-card-parent {
+  background-color: blanchedalmond;
+  border-radius: 10px;
+  height: 350px;
+  width: 250px;
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+  /* color: red; */
+}
+.project-image {
+  height: 50%;
+  width: 100%;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
-.project-card:hover{
-    height: 300px;
-    width: 200px;
-    background-color: yellow;
+.project-title {
+  font-size: 150%;
+  font-weight: bold;
+  /* color: yellow; */
 }
 
-.project-image{
-    width: 100%;
-    height: 70%;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+.project-description {
+  font-size: 100%;
 }
+
+.project-card-parent:hover {
+  height: 400px;
+  width: 300px;
+}
+
+/* .project-title:hover {
+  font-size: 30px;
+  font-weight: bold;
+  /* color: yellow; */
+/* } */
+
+/* .project-description:hover {
+  font-size: 16px; */
+/* } */
