--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
-.App {
- 
+
+
+.app {
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
+  background-color: var(--primary-sky-blue-color);
 }
 
 .App-logo {
