--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -1,15 +1,17 @@
 .about-me {
-  height: 400px;
+  /* height: 400px; */
   width: 100%;
   background-color: var(--secondary-sky-blue-color);
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: row;
+  padding-top:60px ;
+  padding-bottom:60px ;
 }
 
 .left-image-container {
-  width: 50%;
+  width: 45%;
   height: 100%;
   display: flex;
   background-color: var(--transperent-color);
@@ -27,7 +29,7 @@
 
 .about-details {
   display: flex;
-  width: 50%;
+  width: 45%;
   background-color: var(--transperent-color);
   align-items: flex-start;
   flex-direction: column;
@@ -41,7 +43,6 @@
 .about-description {
   font-size: 16px;
   background-color: var(--transperent-color);
-  width: 80%;
   text-align: start;
 }
 
@@ -58,13 +59,14 @@
 
 @media screen and (max-width: 750px) {
   .about-me {
-    padding: 50px;
     width: 100%;
     background-color: var(--secondary-sky-blue-color);
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column-reverse;
+      padding-top:20px ;
+  padding-bottom:20px ;
   }
   .about-details {
     display: flex;
@@ -72,10 +74,13 @@
     background-color: var(--transperent-color);
     align-items: flex-start;
     flex-direction: column;
+    
   }
   .left-image-container {
+    padding-top: 20px;
+    padding-bottom: 20px;
     width: 80%;
-    height: 100%;
+    height: 50%;
     display: flex;
     background-color: var(--transperent-color);
     align-items: center;
