--- a/src/components/ContactUs/ContactUs.css
+++ b/src/components/ContactUs/ContactUs.css
@@ -1,8 +1,8 @@
 .contact-us {
-  height: 550px;
   width: 100%;
   display: flex;
   align-items: center;
+  padding-top: 10px;
   justify-content: space-evenly;
 }
 
@@ -19,12 +19,17 @@
 }
 .lets-talk-text {
   margin: 0px;
+  background-color: var(--transperent-color);
+}
+.form {
+  background-color: var(--transperent-color);
 }
 
 .lets-talk-description {
   margin: 0px;
   font-size: 14px;
   color: blueviolet;
+  background-color: var(--transperent-color);
 }
 .input-label {
   margin: 0px;
@@ -32,6 +37,7 @@
 
 .input-text-field {
   height: 30px;
+  width: 100%;
   border: none;
   border-radius: 50px;
   background-color: cornsilk;
@@ -41,6 +47,7 @@
 
 .input-text-message {
   height: 70px;
+  width: 100%;
   border: none;
   border-radius: 10px;
   background-color: cornsilk;
@@ -61,8 +68,6 @@
 }
 
 .hire-me:hover {
-  /* width: 40%; */
-
   background-color: chocolate;
   color: darkmagenta;
 }
@@ -77,7 +82,6 @@
 .contact-us-image {
   height: 70%;
   width: 70%;
-  /* background-color: white; */
 }
 
 .svg-image {
@@ -103,13 +107,33 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    padding: 100px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: var(--transperent-color);
   }
   .lets-talk-container {
-    width: 80%;
+    background-color: var(--transperent-color);
+    width: 90%;
     display: flex;
     flex-direction: column;
     text-align: start;
+  }
+  .input-text-field {
+    height: 30px;
+    width: 100%;
+    border: none;
+    border-radius: 50px;
+    background-color: cornsilk;
+    padding-left: 15px;
+    cursor: alias;
+  }
+  .input-text-message {
+    height: 70px;
+    width: 100%;
+    border: none;
+    border-radius: 10px;
+    background-color: cornsilk;
+    cursor: alias;
   }
   .persional-info-container {
     width: 80%;
@@ -118,8 +142,8 @@
     background-color: var(--transperent-color);
   }
   .contact-us-image {
-  height: 80%;
-  width: 80%;
-  background-color: var(--transperent-color);
-}
+    height: 80%;
+    width: 80%;
+    background-color: var(--transperent-color);
+  }
 }
