--- a/src/components/CopyRight/CopyRight.css
+++ b/src/components/CopyRight/CopyRight.css
@@ -5,6 +5,6 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 6vh;
-    font-size: 1rem;
+    height: 30px;
+    font-size: 0.8rem;
 }
