--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -5,7 +5,7 @@
   background-color: var(--background-color);
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 .background {
   background-color: var(--transperent-color);
@@ -13,12 +13,10 @@
 
 .left-container {
   height: 100%;
-  width: 50%;
-
+  width: 45%;
   display: flex;
   flex-direction: column;
-  padding-left: 5%;
-  padding-right: 5%;
+
   align-items: flex-start;
   justify-content: center;
 }
@@ -29,7 +27,6 @@
 
 .animation-text {
   display: inline-flex;
-
   margin: 0px;
   overflow: hidden;
   height: 50px;
@@ -84,7 +81,7 @@
 }
 
 .discription {
-  width: 80%;
+  width: 90%;
   text-align: left;
 }
 
@@ -110,7 +107,7 @@
   align-items: center;
   justify-content: center;
   height: 100%;
-  width: 50%;
+  width: 45%;
   position: relative;
 }
 
@@ -184,21 +181,23 @@
   }
   .left-container {
     /* height: 100%; */
-    width: 80%;
+    width: 90%;
     display: flex;
     flex-direction: column;
-    padding-left: 5%;
-    padding-right: 5%;
+    /* padding-left: 5%;
+    padding-right: 5%; */
     align-items: flex-start;
     justify-content: center;
+    margin-bottom: 10px;
   }
   .home-image {
+  
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: var(--transperent-color);
   /* height: 100%; */
-  width: 80%;
+  width: 90%;
   position: relative;
 }
 }
