--- a/src/components/Resume/Resume.css
+++ b/src/components/Resume/Resume.css
@@ -1,88 +1,104 @@
 .resume {
-    margin: 20px;
-    height: 70vh;
-    width: 95%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    border-radius: 10px;
-    background-color: var(--primary-sky-ble-color);
+  margin: 20px;
+  width: 95%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  border-radius: 10px;
 }
 
-.transp{
-     background-color: var(--transperent-color);
+.title {
+  background-color: var(--transperent-color);
+  font-size: 2rem;
 }
 
-.education-column {
-    display: flex;
-    justify-content: space-evenly;
+.wrap-elements {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
-.education-content {
-    display: flex;
-    margin: 0px;
-    /* background-color: yellow; */
-    justify-content: start;
-    align-items: center;
+.education-card {
+  height: 70%;
+  width: 40%;
+  min-width: 220px;
+  min-height: 80px;
+  max-width: 340px;
+  max-height: 160px;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: var(--secondary-sky-blue-color);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
+.top-tile {
+  background-color: var(--transperent-color);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.headding {
+  color: var(--primary-black-color);
+  font-size: 1.3rem;
+  font-weight: bolder;
+  background-color: var(--transperent-color);
+}
+.sub-hedding {
+  color: var(--secondary-black-color);
+  font-size: 1rem;
+  font-weight: 300;
+  background-color: var(--transperent-color);
+}
+.location {
+  width: 100%;
+  background-color: var(--transperent-color);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.loc-year {
+  background-color: var(--transperent-color);
 }
 
-.education-line {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
+.skill-card {
+  height: 25%;
+  width: 40%;
+  min-width: 220px;
+  min-height: 60px;
+  max-width: 340px;
+  max-height: 120px;
+  display: flex;
+  margin: 10px;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: var(--secondary-sky-blue-color);
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
-.ed-circle {
-    height: 10px;
-    width: 10px;
-    background-color: brown;
-    border-radius: 10px;
+.range-select {
+  width: 100%;
+  -webkit-appearance: none;
+  border-radius: 10px;
+  /* color: var(--primary-black-color); */
+  background-color: var(--background-color);
+  transition: background-color 450ms ease-in;
+  overflow: hidden;
+  box-shadow: inset 0 0 5px var(--secondary-black-color);
 }
-
-.ed-line {
-    height: 50px;
-    width: 3px;
-    background-color: brown;
-    border-end-start-radius: 50px;
-    border-end-end-radius: 50px;
-}
-
-.ed-info {
-    height: 100px;
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: column;
-    align-items: start;
-}
-
-.ed-item {
-    margin: 0%;
-    color: blueviolet;
-    font-size: 13px;
-}
-
-.skils-item{
-    display: flex;
-    align-items: center;
-    margin: 10px;
-}
-
-.skils-item-text{
-    color: blueviolet;
-    font-size: 14px;
-    margin: 5px;
-}
-
-.education-card{
-    height: 100px;
-    width: 200px;
-    border-radius: 10px;
-    background-color: aquamarine;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-     box-shadow: 10px 10px 8px 10px #888888;
+.range-select::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 10%;
+  height: 15px;
+  border-radius: 10px;
+  background-color: var(--background-color);
+  box-shadow: -407px 0 0 400px var(--primary-black-color);
 }
