--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -5,6 +5,13 @@
   display: flex;
   flex-direction: column;
   cursor: pointer;
+  position: relative;
+}
+.front-card {
+  height: 100%;
+  width: 100%;
+  background-color: var(--transprent-color);
+  border-radius: 10px;
 }
 .project-image {
   height: 50%;
@@ -19,10 +26,36 @@
 }
 
 .project-description {
+  width: 95%;
   font-size: 100%;
 }
 
-.project-card-parent:hover {
-  height: 400px;
-  width: 300px;
+.back-card {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  background-color: var(--transprent-color);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+}
+.long-dis{
+   background-color: var(--transprent-color);
+   color:var(--background-color)
+}
+.source-code{
+  background-color: var(--transprent-color);
+   color:var(--background-color)
+}
+.back-card:hover {
+  height: 100%;
+  width: 100%;
+  opacity: 1;
+  display: flex;
+  justify-content: space-around;
+  padding: 5px;
+  background-color: var(--primary-black-color);
 }
